<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lender_add_availability"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sparkleusc.sparklesparkhere.LenderAddAvailability">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Listings"
        android:id="@+id/AvailabilitiesTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"></ListView>

    <Button
        android:text="Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addAvailabilityButton"
        android:layout_toEndOf="@+id/addAvailabilityButton"
        android:layout_marginStart="27dp"
        android:id="@+id/continueButton" />

    <Button
        android:text="Add Listing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addAvailabilityButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="47dp" />

</RelativeLayout>
