<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sparkleusc.sparklesparkhere.MapsActivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:layout="@layout/activity_maps" />

    <Button
        android:text="Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button11"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp" />

    <Button
        android:text="Search"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/button11"
        android:layout_alignStart="@+id/button11" />

    <Button
        android:text="Favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/dropinButton"
        android:layout_below="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <Button
        android:text="Reservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/button10"
        android:layout_below="@+id/dropinButton"
        android:layout_alignStart="@+id/dropinButton" />

    <TextView
        android:text="***avg price****"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="13dp"
        android:id="@+id/avgPriceTV" />

</RelativeLayout>
