...
        app:srcCompat="@drawable/cast_album_art_placeholder"
        android:id="@+id/seekerProfilePIc"
        android:layout_alignTop="@+id/editText7"
        android:layout_toStartOf="@+id/textView3" />

    <Button
        android:text="Switch Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button2" />

...
